--- a/index.html
+++ b/index.html
@@ -32,3 +32,4 @@ body {
 
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<img src="/assets/titlecard.jpg" alt="titlecard" width="500" height="600">
