--- a/index.html
+++ b/index.html
@@ -32,4 +32,4 @@ body {
 
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<img src="/assets/titlecard.jpg" alt="titlecard" width="500" height="600">
+<img src="/assets/titlecard.png" alt="titlecard" width="2048" height="361">
