--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@ body {
 </head>
 
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/bill1.jpg">
 <img src="/assets/titlecard.png" alt="titlecard" width="2048" height="361">
