--- a/yaoi/index.html
+++ b/yaoi/index.html
@@ -15,6 +15,7 @@ p.mix {border-style: dotted dashed solid double;}
 a {
 border: 6px groove grey;
 }
+<link rel="stylesheet" href="mystyle.css">
 
 a:active {
 border: 10px grove black; 
@@ -27,3 +28,26 @@ body {
 <head>
 <title>THE WILL YAOI-VERSE SYNOPSIS</title>
 <h1>THE ENTIRE WILL YAOI STORYLINE SO FAR (guys you gotta believe me this glue smells flippin AMAZING)</h1>
+<h2>WILL YAOI 1</h2>
+<div>Will sees tom and loves him at first sight
+In an alleyway
+Instantly hugs him, breaks 3 ribs
+In hospital, will’s real toxic and stalks him 
+Will is abusive 
+Tom goes to tobias
+Tobias loves tom so goes to swordfight will
+Will since he’s a little boy dies like a little boy
+Yaoi happens between tom and tobias
+</div>
+<h3>WILL YAOI 2</h3>
+<div>Aloshy saw all of will yaoi one and is a necromancer
+Decides for some stupid reason to revive will
+It goes wrong, so will is back but only for two weeks :(
+He meets jamie mcahon, and the yaoi begins
+It’s doomed, since he’s gonna die in 2 weeks so him and jamie tries to help him by making him appreciate life :(
+He dies wishing he’d spent more time with jamie, jamie becomes really sad and mourns and buries will :(
+</div>
+<h4>WILL YAOI 3 – SQUILL BASNETT EDITION!!!!!!!</h4>
+<div>Uhhh squill Basnett – evil will Basnett – just goes and yaois about, maybe with mr bowers or something</div>
+<h5>WILL YAOI 4- ALTERNATE UNIVERSE WILL </h5>
+<div>Not fleshed out- it’s just… in an alternate universe? Idk, maybe he’s super quiet or something, that’d be cute</div>
