--- a/yaoi/index.html
+++ b/yaoi/index.html
@@ -26,6 +26,8 @@ body {
 }
 </style>
 <head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <title>THE WILL YAOI-VERSE SYNOPSIS</title>
 <h1>THE ENTIRE WILL YAOI STORYLINE SO FAR (guys you gotta believe me this glue smells flippin AMAZING)</h1>
 <h2>WILL YAOI 1</h2>
