--- a/yaoi/index.html
+++ b/yaoi/index.html
@@ -30,7 +30,7 @@ body {
 </head>
 <title>THE WILL YAOI-VERSE SYNOPSIS</title>
 <h1>THE ENTIRE WILL YAOI STORYLINE SO FAR (guys you gotta believe me this glue smells flippin AMAZING)</h1>
-<h2>WILL YAOI 1</h2>
+<h1>WILL YAOI 1</h1>
 <div>Will sees tom and loves him at first sight
 In an alleyway
 Instantly hugs him, breaks 3 ribs
@@ -41,7 +41,7 @@ Tobias loves tom so goes to swordfight will
 Will since he’s a little boy dies like a little boy
 Yaoi happens between tom and tobias
 </div>
-<h3>WILL YAOI 2</h3>
+<h1>WILL YAOI 2</h1>
 <div>Aloshy saw all of will yaoi one and is a necromancer
 Decides for some stupid reason to revive will
 It goes wrong, so will is back but only for two weeks :(
@@ -49,7 +49,15 @@ He meets jamie mcahon, and the yaoi begins
 It’s doomed, since he’s gonna die in 2 weeks so him and jamie tries to help him by making him appreciate life :(
 He dies wishing he’d spent more time with jamie, jamie becomes really sad and mourns and buries will :(
 </div>
-<h4>WILL YAOI 3 – SQUILL BASNETT EDITION!!!!!!!</h4>
+<h1>WILL YAOI 3 – SQUILL BASNETT EDITION!!!!!!!</h1>
 <div>Uhhh squill Basnett – evil will Basnett – just goes and yaois about, maybe with mr bowers or something</div>
-<h5>WILL YAOI 4- ALTERNATE UNIVERSE WILL </h5>
+<h1>WILL YAOI 4- ALTERNATE UNIVERSE WILL </h1>
 <div>Not fleshed out- it’s just… in an alternate universe? Idk, maybe he’s super quiet or something, that’d be cute</div>
+<h1>WILL YAOI 5- FUTURISTIC CATBOY WILL!!!!!!!1</h1>
+<div>200 years later, In area 51 (not know by will), Oscar pownall digs up will’s corpse, then uses his dna with a mixture of cat dna in his experiments to make the new, better, furrier, catboy will! He is sent to England to enjoy his life, never knowing how he is made. However, he feels empty and unforfilled without a boyfriend, especially after he fails to find jamie mcahon again. Luckily, he finds ethan ward, who has had much to do with catboys and yaoi before (probably), and therefore helps him find his true purpose, and even find love…? However, he is distraught to learn that ethan ward doesn’t even like him, and this is something to do with his work..? apparently, ethan ward’s character is a ruse, and he does not really act that way- and is a member of the cia! *epic blackout to be continued screen*</div>
+<h1>WILL YAOI 6 – THE ONE WITH KIM JONG UN AND DONALD TRUMP AND THE CIA AND CATBOY WILL</h1>
+<div>Will is given the offer by ethan ward- the undercover cia agent, to get involved with the Donald trump and kim jong un situation – a relationship that’s very low maintenance, and he needs to fix it, by starting a… love triangle? He does so, and begins to properly love both of them, as they both fight for him. However, he then learns that  his true purpose is to help assassinate kim jong un, to free north korea from being a dictatorship. Therefore, will is left with the dilemma: does he kill kim jong un, or risk the wrath of the cia. His love for kim grows even though he knows he may have to kill him… however, in the end, ethan wards interrupts a session of heavy flirting between kim, trump, and will, and kills kim jong un D: will is distraught, but it turns out that trump also had grown strong feelings for kim jong un! D: it ends with ethan ward being captured and taken away, and will going on the run as trump crashes out and starts nuclear war for the sake of it</div>
+<h1>WILL YAOI 7 – CATBOY CHARLIE KIRK, NUCLEAR APOCALYPSE,  OSCAR POWNALL AND AREA 51 (TRUST ME THIS IS THE BEST PART OF THE STORY, IT’S MIRRORED CHARACTER ARCS WITH JAMIE MCAHON I JUST REALISED)</h1>
+<div>On the run from trump’s nukes, catboy will stumbles across area 51 – and is invited in by the now owner, Oscar pownall. Will learns about his catboy backstory, and how the ex-head of area 51 – Erika kirk – was killed by him, and he is now running it, to try and get the love of his life, Charlie kirk, back to life. He was successful with the experiment with will’s DNA and cat DNA to re-birth will, so he did the same with Charlie kirk. However, Charlie kirk’s catboyfication was less successful- he loses his personality, and memories! Oscar is trying to solve this, and will decides to help. Being a massive fan of Charlie kirk, will  also tries to help Charlie regain his right-wing personality. They train him in how to be more kirk-y, and will helps Charlie to learn more about the way life is like outside area 51, and how to enjoy life. Will stays with Charlie kirk, and they learn more about life, love, how to be kirk, and yaoi. They both slowly grow feelings for eachother, and Charlie kirk becomes more and more kirk-like. However, a nuke from trump accidentally hits area 51, and they are all killed! Their brains and bodies are separated, but Oscar pownall’s devout followers perform surgery to revive them… however, they do not know which brain is which, and therefore make it so will is in Charlie kirk’s body, Charlie kirk is in oscar’s body, and Oscar is in will’s. they go off towards Washington dc, to try and stop trump from ending the world.</div>
+<h1>WILL YAOI 8 – LORD OF THE RINGS BUT WITH TRUMP AND CATBOYS AND NO RINGS AND MORE GAY </h1>
+<div>On the long trip to Washington dc, Oscar, Charlie kirk and will grow an immense bond, and yaoi insues. When they find trump, it turns out it is actually the presumed dead, but actually living Erika kirk, wearing donald’s skin. She wishes to become her lost husband- Charlie kirk, so brain swaps with him, not knowing it’s really will. Will is now in Erika kirk’s body, and Erika is in charlie’s body. Oscar and Charlie flee, but are separated. We do not know where they have gone. </div>
