--- a/index.html
+++ b/index.html
@@ -34,3 +34,4 @@ body {
 <img src="/assets/titlecard.png" alt="titlecard" width="2048" height="361">
 <p>This site, known as "willbasnett.gay", is a project created to spread the word about william edward basnett, well known as one of the coolest, most interesting, and funniest people ever made. as a studious basnett fan, i have created this 𝓸𝓯𝓯𝓲𝓬𝓲𝓪𝓵𝓵𝔂 𝓮𝓷𝓭𝓸𝓻𝓼𝓮𝓭 𝓯𝓪𝓷𝓹𝓪𝓰𝓮 to spread the word!</p>
 <a href="https://www.willbasnett.gay/yaoi">the yaoi archives! to be updated regularly</a> <a href="https://www.willbasnett.gay/theories">will basnett theories! share your own with our email adress [[TO BE ADDED]]</a>
+<a>PLEASE EMAIL WILLBASNETT@WILLBASNETT.GAY FOR ANY IDEAS, WILL YAOI RECCOMENDATIONS, OR SIGHTINGS</a>
